[package]
edition = "2021"
name = "rust_audio_visualization"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust_audio_visualization"

[dependencies]
anyhow = "1.0.13"
cpal = "0.13.3"
piston = "0.53.0"
piston2d-graphics = "0.41.0"
piston2d-opengl_graphics = "0.79.0"
pistoncore-glutin_window = "0.69.0"
rand = "0.8.3"
